Edit text size on high-score btn to stop overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,8 +165,11 @@ header {
     .small-screen-br {
         display: none;
     }
+}
+
+@media screen and (max-width: 530px) {
     .high-scores-btn {
-        font-size: 24px;
+        font-size: small;
     }
 }
 
